--- a/FinalProject/app/build.gradle
+++ b/FinalProject/app/build.gradle
@@ -37,6 +37,6 @@ dependencies {
     compile project(':androidlibrary')
     compile project(path: ':backendCloudModule', configuration: 'android-endpoints')
     compile 'com.android.support:appcompat-v7:24.0.0'
-    compile 'com.google.android.gms:play-services-ads:9.4.0'
+    freeCompile 'com.google.android.gms:play-services-ads:9.4.0'
     compile 'com.android.support:design:24.0.0'
 }
